# IPW_Learn

./: .gitignore  bayesian_optimization.py  config.yaml  data.py  domain_covariances.csv  domain_means.csv  main.py  model_factory.py  propensityscore.py  pyproject.toml  result.py  result.txt  train.py  wasserstain_distance.py  weight.py
.devcontainer/: devcontainer.json  dockerfile
configs/: 10dim_covariances.csv  10dim_means.csv  config.yaml  domain_covariances.csv  domain_means.csv
results/: result_20251207181028.csv  result_20251208123825.csv  result_20260105024610.csv  result_20260107134731.csv  result_20260107142619.csv  result_20260107150601.csv  result_20260209175014.csv  result_20260209175111.csv  result_20260209175143.csv  result_20260209181106.csv  result_20260209181128.csv  result_20260209181202.csv  result_20260209181226.csv  result_20260210200054.csv  result_20260212191535.csv  result_20260212191635.csv  summary_20251207181028.yaml  summary_20251208123907.yaml  summary_20251208124325.yaml  summary_20251208130939.yaml  summary_20251208144105.yaml  summary_20260105024610.yaml  summary_20260107134731.yaml  summary_20260107142619.yaml  summary_20260107142759.yaml  summary_20260107150601.yaml  summary_20260108172432.yaml  summary_20260108174111.yaml  summary_20260108174249.yaml  summary_20260209175014.yaml  summary_20260209175111.yaml  summary_20260209175143.yaml  summary_20260209181106.yaml  summary_20260209181128.yaml  summary_20260209181202.yaml  summary_20260209181226.yaml  summary_20260210200054.yaml  summary_20260212191535.yaml  (+2 more)
(+12 files in other folders)
